docs/model-weighted-round-robin/v1.2/docs/model-weighted-round-robin.md
---
title: "Overview"
---
# Model Weighted Round Robin

## Overview

The Model Weighted Round Robin policy implements weighted round-robin load balancing for AI models. It distributes requests based on predefined weight values assigned to each model, enabling probabilistic control over request distribution and giving higher priority to models with greater processing power or availability. This policy is useful for distributing load proportionally across models based on their capacity, cost, or performance characteristics.

## Features

- Weighted distribution of requests across multiple models based on assigned weights
- Proportional request allocation (models with higher weights receive more requests)
- Optional per-target routing to additional LLM providers (multi-provider weighted round robin)
- Automatic model suspension on failures (5xx or 429 responses), scoped to the selected provider/model pair
- Configurable suspension duration for failed models
- Support for extracting model identifier from payload, headers, query parameters, or path parameters
- Dynamic model selection based on availability and weights

## Configuration

This policy requires configuration in both the API definition YAML and the LLM provider template.

### User Parameters (API Definition)

| Parameter | Type | Required | Default | Description |
|-----------|------|----------|---------|-------------|
| `models` | `WeightedModel` array | Yes | - | List of models with weights for weighted round-robin distribution. Each model must have a `model` name and `weight`. |
| `suspendDuration` | integer | No | `30` | Suspension time in seconds for failed models. Set to `0` to disable failed-model suspension tracking. Must be >= 0. |

### WeightedModel Configuration

Each model in the `models` array is an object with the following properties:

| Property | Type | Required | Description |
|----------|------|----------|-------------|
| `model` | string | Yes | The AI model name to use for load balancing. |
| `weight` | integer | Yes | The weight assigned to this model for distribution. Higher weights mean more requests will be routed to this model. Weight is relative to total weight of all models. Must be at least 1. |
| `provider` | string | No | Optionally routes this target to an additional LLM provider. Must match an `LlmProxy` `additionalProviders[].as` value, or the provider id when `as` is absent. When omitted, the request uses the `LlmProxy` primary/default provider. |

#### Multi-provider routing

Each weighted target can optionally name an additional provider. When a target
specifies `provider`, the policy routes the request to that provider's named
upstream during the request **header** phase (Envoy dynamic cluster selection)
and records `selected_provider` in request metadata so conditional provider
authentication and protocol transformers can adapt to the chosen provider. When
`provider` is omitted, no upstream override is applied and `selected_provider` is
not set, so the `LlmProxy` primary-provider fallback, authentication, and default
cluster logic continue to apply unchanged. The provider is preserved through the
weighted-sequence expansion, so a target's weight and provider are honored together.

```yaml
models:
  - model: gpt-4o
    weight: 3
    # Omitted provider → LlmProxy primary/default provider.
  - model: claude-sonnet-4-5-20250929
    provider: anthropic-provider   # matches additionalProviders[].as (or provider id)
    weight: 1
```

#### LLM provider template

This policy depends on the `requestModel` configuration defined in the LLM provider template to identify and extract the model from incoming requests.

> **Required:** The `requestModel` configuration must be provided; the policy will not function without it.

### `requestModel` Parameters

| Parameter | Type | Required | Description |
|-----------|------|----------|-------------|
| `requestModel.location` | string | Yes | Location of the model identifier: `payload`, `header`, `queryParam`, or `pathParam` |
| `requestModel.identifier` | string | Yes | JSONPath (for payload), header name (for header), query param name (for queryParam), or regex pattern (for pathParam) to extract model |

**Note:**

Inside the `gateway/build.yaml`, ensure the policy module is added under `policies:`:

```yaml
- name: model-weighted-round-robin
  gomodule: github.com/wso2/gateway-controllers/policies/model-weighted-round-robin@v1
```

## Reference Scenarios

### Example 1: Basic Weighted Round Robin with Payload-based Model

Deploy an LLM provider with weighted round-robin load balancing:

```yaml
apiVersion: gateway.api-platform.wso2.com/v1
kind: LlmProvider
metadata:
  name: weighted-round-robin-provider
spec:
  displayName: Weighted Round Robin Provider
  version: v1.0
  template: openai
  context: /openai
  upstream:
    url: "https://api.openai.com/v1"
    auth:
      type: api-key
      header: Authorization
      value: Bearer <openai-apikey>
  accessControl:
    mode: deny_all
    exceptions:
      - path: /chat/completions
        methods: [POST]
  operationPolicies:
    - name: model-weighted-round-robin
      version: v1
      paths:
        - path: /chat/completions
          methods: [POST]
          params:
            models:
              - model: gpt-4
                weight: 3
              - model: gpt-3.5-turbo
                weight: 2
              - model: gpt-4-turbo
                weight: 1
            suspendDuration: 60
```

**Test the weighted round-robin distribution:**

```bash
# Requests will be distributed: 50% gpt-4, 33.3% gpt-3.5-turbo, 16.7% gpt-4-turbo
curl -X POST http://localhost:8080/openai/chat/completions \
  -H "Content-Type: application/json" \
  -d '{
    "model": "gpt-4",
    "messages": [
      {
        "role": "user",
        "content": "Hello"
      }
    ]
  }'
```

### Example 2: Multi-Provider Weighted Round Robin

Distribute weighted traffic across a primary provider and additional providers.
Deploy the three `LlmProvider` resources first. The `LlmProxy` references their
`metadata.name` values through `id`. Each `models[]` entry references an additional
provider by its proxy-local `as` alias (or by `id` when `as` is omitted). Targets
without a `provider` use the primary provider.

```yaml
apiVersion: gateway.api-platform.wso2.com/v1
kind: LlmProxy
metadata:
  name: multi-provider-weighted-round-robin
spec:
  displayName: Multi Provider Weighted Round Robin
  version: v1.0
  provider:
    id: openai-primary-provider
  additionalProviders:
    - id: anthropic-provider-resource
      as: anthropic-provider
    - id: bedrock-provider-resource
      as: bedrock-provider
      transformer:
        type: openai-to-bedrock-transformer
        version: v0
  operationPolicies:
    - name: model-weighted-round-robin
      version: v1
      paths:
        - path: /chat/completions
          methods: [POST]
          params:
            models:
              - model: gpt-4o                          # primary provider
                weight: 3
              - model: claude-sonnet-4-5-20250929
                provider: anthropic-provider
                weight: 1
              - model: anthropic.claude-3-5-sonnet-20240620-v1:0
                provider: bedrock-provider
                weight: 1
            suspendDuration: 60
```

With a 3:1:1 weighting, roughly 60% of requests use the primary provider, 20% the
anthropic-provider, and 20% the bedrock-provider. Requests routed to an additional
provider carry `selected_provider` metadata so the provider's conditional
authentication and any protocol transformer are applied.

## How It Works

#### Model Selection

On each request, the policy selects the next available model in a weighted cyclic sequence.
- **Weight Calculation**: During initialization, the policy computes total weight and builds a weighted sequence where each model appears proportional to its configured weight.
- **Model Extraction**: The policy extracts the original model from the request (if configured) and stores it for reference.
- **Model Modification**: The policy modifies the request to use the selected model based on the `requestModel` configuration.

#### Request Model Locations

The policy supports extracting the model identifier from different locations in the request:

**Payload (JSONPath)**: Extract model from JSON payload using JSONPath:
- **Location**: `payload`
- **Identifier**: JSONPath expression (e.g., `$.model`, `$.messages[0].model`)

**Header**: Extract model from HTTP header:
- **Location**: `header`
- **Identifier**: Header name (e.g., `X-Model-Name`, `X-LLM-Model`)

**Query Parameter**: Extract model from URL query parameter:
- **Location**: `queryParam`
- **Identifier**: Query parameter name (e.g., `model`, `llm_model`)

**Path Parameter**: Extract model from URL path using regex:
- **Location**: `pathParam`
- **Identifier**: Regex pattern to match model in path (e.g., `models/([a-zA-Z0-9.\-]+)`)

#### Model Suspension

When a model returns a 5xx or 429 response, the policy can automatically suspend that model for a configurable duration:

- **Suspension Duration**: Configured via the `suspendDuration` parameter (in seconds)
- **Automatic Recovery**: Suspended models are automatically re-enabled after the suspension period expires
- **Availability Check**: Suspended models are skipped during weighted round-robin selection until they recover
- **Weight Preservation**: When a model is suspended, the remaining models continue to be selected based on their relative weights

#### Suspension Behavior

- Suspension is tracked per **provider/model pair**, not by model name alone. The same
  model name behind two different providers is suspended independently.
- If all targets are suspended, the policy returns HTTP 503 with error: "All models are currently unavailable"
- Suspension period starts from the time of failure
- When a target is suspended, the weighted sequence is dynamically adjusted to exclude that provider/model pair

#### Weight Calculation

The policy builds a weighted sequence by repeating each model a number of times equal to its weight:

- **Total Weight**: Sum of all model weights
- **Sequence Length**: Equal to the total weight
- **Distribution**: Each model appears in the sequence `weight` times
- **Proportional Selection**: Over time, each model receives requests proportional to `model_weight / total_weight`



## Notes

- For path parameters, the regex pattern should include a capturing group to extract the model name. The policy uses the first capturing group as the model identifier.
- This capability distributes requests proportionally across multiple models to balance capacity, cost, performance tiers, and migration rollout needs.
- The weighted sequence is pre-computed once during policy initialization and reused for all requests. It is not rebuilt on each request.
- The round-robin index is maintained per policy instance and increments for each request.
- Model selection follows the weighted sequence in a deterministic cyclic pattern.
- The original model from the request is stored in metadata but is replaced with the selected model for routing.
- If `suspendDuration` is 0, failed models are not suspended and will continue to be selected in the weighted round-robin cycle.
- Higher weights result in more frequent selection but do not guarantee exact proportional distribution in small request volumes.
- The weighted sequence ensures long-term proportional distribution, but short-term distribution may vary due to suspension and availability.
- The `requestModel` configuration is required and must be provided by the LLM provider template. There is no default behavior.
- **State locality:** The weighted-sequence cursor and provider/model suspension state are
  held in memory, local to each policy-engine instance. They are not shared across instances
  and are reset on process restart or configuration reload. With multiple gateway replicas,
  each replica advances its own cursor and tracks suspensions independently.
